htop (2.1.0-1) UNRELEASED; urgency=medium

  [ Graham Inggs ]
  * New upstream release 2.1.0 (Closes: #889634)

  [ Helmut Grohne ]
  * Fix FTCBFS: Annotate python-minimal build dependency with :native.
    (Closes: #864672)

 -- Graham Inggs <ginggs@debian.org>  Mon, 05 Feb 2018 12:49:03 +0000

htop (2.0.2-1) unstable; urgency=medium

  * Update to upstream version 2.0.2
    - Use SOURCE_DATE_EPOCH instead of current year in copyright message
      to make build reproducible. (Closes: #822963)
    - Fix build to detect the Hurd as a Linux platform. (Closes: #821747)
    - Fix crash when setting CPU affinity and -fPIE. (LP: #1589549)
  * Bump Standards to 3.9.8 (no changes required)

 -- Daniel Lange <dl.ml1@usrlocal.de>  Mon, 25 Jul 2016 19:46:17 +0200

htop (2.0.1-1) unstable; urgency=medium

  * New upstream release 2.0.1. (Closes: #814401, #783893, #774930)
  * Clean up patches from 1.0.3 -> 2.0.1
  * Update compat -> 9, rules -> debhelper/9
  * Update debian/copyright to copyright-format/1.0 (Closes: #749850)
  * Add lsof as suggested (Closes: #817918)
  * Change maintainership jackyf -> DLange, jackyf and ginggs will
    co-maintain. Jackyf: Thank you very much for 8 years of htop
    maintenance!

 -- Daniel Lange <dl.ml1@usrlocal.de>  Thu, 14 Apr 2016 10:25:45 +0200

htop (1.0.3-1) unstable; urgency=low

  * New upstream release.
  * debian/watch:
    - Updated to use new download location (http://hisham.hm/htop/releases).
  * debian/patches:
    - 600-openvz-veid-on-kernels-gt-2.6.18.patch: refreshed.
    - 610-io-priority-only-on-linux.patch: ported to new upstream version.
    - 700-ltrace-support.patch: ported to new upstream version.
  * debian/control:
    - Bumped Standards-Version to 3.9.5, no changes needed.
    - Updated Homepage to 'http://hisham.hm/htop/'.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 01 May 2014 13:16:56 +0300

htop (1.0.2-3) unstable; urgency=low

  * debian/patches: